--- a/festcss.css
+++ b/festcss.css
@@ -5,14 +5,7 @@
 #second{
 margin-left: 30%;
 }
-hr{
-    width: 300px;
-margin-left: auto;
-margin-right: auto;
-height: 100px;
-background-color:#f3f6db;
-color:#f3f6db;
-}
+
 #cc{
     border-bottom: 30px;
 }
@@ -21,7 +14,7 @@ div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width:60%;
+    width:70%;
     margin-left:20%;
 
 }
@@ -55,6 +48,15 @@ div.tab button.active {
     border: 1px solid #ccc;
     border-top: none;
     float: left;
-    width:60%;
+    width:70%;
     margin-left:20%;
+}
+#open{
+    display: block;
+    border: 1px solid #ccc;
+    border-top: none;
+    float: left;
+    width:70%;
+    margin-left:20%;
+
 }
