--- a/myCSS/MenuBar.css
+++ b/myCSS/MenuBar.css
@@ -1,7 +1,7 @@
-
 body
 {
 	background-color:  #ebf5fb ;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 .outer
 {
@@ -21,26 +21,200 @@ font-size: 14px;
 color: #FFF;
 box-shadow: 2px 0px 2px 2px #008AD1;
 }
+.mycaret
+{
+	font-size: 14px;
+	padding-top: 5px;
+	padding-left: 4px;
+}
 .area1
 {
-	width:10%;
-	font-size:30px;
+	width:8%;
+	font-size:37px;
 	color:#b92b27;
 	font-family:'FugazOne-Regular';
 	float:left;
+	box-sizing: border-box;
+	padding-top: 7px;
 }
 .area2
 {
-	width:50%;
+	width:45%;
 	float:left;
 	padding-top:10px;
+	box-sizing: border-box;
 }
 .area3
 {
 	padding-top:10px;
 	height:20px;
-	width:40%;
+	width:47%;
 	float:left;
+}
+.events_menu
+{
+	display: none;
+	width: 200px;
+	background-color: #fff;
+	box-shadow: 0 0 2px 2px #e5e5e5;
+	position: absolute;
+	z-index: 1000;
+	top: 50px;
+	right: -90px;
+	border-top: 2px solid #55ACEE;
+}
+.events_menu > div
+{
+	border-top: 1px solid #e2e2e2;
+}
+.events_menu > div > a
+{
+	display: block;
+	padding-left: 0px;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+.events_menu > div > a:link
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.events_menu > div > a:visited
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.events_menu > div > a:hover
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #fff!important;
+}
+.events_menu > div > a:active
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.events:hover .events_menu 
+{
+    display: block;
+}
+.events:hover
+{
+	cursor: pointer;
+}
+.colleges_menu
+{
+	display: none;
+	width: 200px;
+	background-color: #fff;
+	box-shadow: 0 0 2px 2px #e5e5e5;
+	position: absolute;
+	z-index: 1000;
+	top: 50px;
+	right: -82px;
+	border-top: 2px solid #55ACEE;
+}
+.colleges_menu > div
+{
+	border-top: 1px solid #e2e2e2;
+}
+.colleges_menu > div > a
+{
+	display: block;
+	padding-left: 10px;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+.colleges_menu > div > a:link
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.colleges_menu > div > a:visited
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.colleges_menu > div > a:hover
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #fff!important;
+}
+.colleges_menu > div > a:active
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.colleges:hover .colleges_menu 
+{
+    display: block;
+}
+.colleges:hover
+{
+	cursor: pointer;
+}
+.account_menu
+{
+	display: none;
+	width: 200px;
+	background-color: #fff;
+	box-shadow: 0 0 2px 2px #e5e5e5;
+	position: absolute;
+	z-index: 1000;
+	top: 50px;
+	right: 10px;
+	border-top: 2px solid #55ACEE;
+}
+.account_menu > div
+{
+	border-top: 1px solid #e2e2e2;
+}
+.account_menu > div > a
+{
+	display: block;
+	padding-left: 10px;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+.account_menu > div > a:link
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.account_menu > div > a:visited
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.account_menu > div > a:hover
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #fff!important;
+}
+.account_menu > div > a:active
+{
+	text-decoration: none;
+	font-size: 16px;
+	color: #777!important;
+}
+.account:hover .account_menu 
+{
+    display: block;
+    cursor: pointer;
+}
+.account:hover{
+	cursor: pointer;
 }
 .clearfix
 {
@@ -89,27 +263,14 @@ box-shadow: 2px 0px 2px 2px #008AD1;
 	font-weight:bold;
 	color:#f2f2f2;
 }
-.list > li
-{
-	display: inline-block;
-	font-size: 14px;
-}
-.list > li > a
-{
-	padding-top: 16px;
-	padding-bottom: 14px;
-	border-radius: 3px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-.list > li > a:hover
-{
-	text-decoration: none;
-}
 .bar
 {
 	font-size:14px;
 	color:#f2f2f2;
+}
+.bar:hover
+{
+	cursor: pointer;
 }
 .image
 {
@@ -177,4 +338,5 @@ box-shadow: 2px 0px 2px 2px #008AD1;
 	background-color: #fff!important;
 	min-height: 656px;
 	box-shadow: 0px 0px 2px 2px #d5d5d5;
+	padding-bottom: 50px;
 }
