--- a/myCSS/profilePageDsgn.css
+++ b/myCSS/profilePageDsgn.css
@@ -3,6 +3,79 @@
 	width:75%;
 	float:left;
 }
+.my_choice_btn
+{
+	border: none;
+	background-color: #e4e4e4;
+	display: block;
+	width: 110px;
+	float: left;
+	border-radius: 30px;
+	padding: 10px 20px 10px 20px;
+	margin-right: 15px;
+	margin-top: 20px;
+	box-sizing: content-box;
+}
+#not_chosen
+{
+	text-align: center;
+	color: #00bfe7;
+	font-size: 16px;
+	margin-top: 50px;
+}
+.my_prog
+{
+	margin-top: 20px;
+}
+#choices
+{
+	padding-top: 7px;
+}
+.follows
+{
+	padding-top: 15px;
+}
+.follows > li > a:link
+{
+	text-decoration: none;
+	color: #6f6f6f;
+	font-size: 14px;
+}
+.follows > li > a:visited
+{
+	text-decoration: none;
+	color: #6f6f6f;
+	font-size: 14px;
+}
+.follows > li > a:hover
+{
+	text-decoration: none;
+	color: #6f6f6f;
+	font-size: 14px;
+}
+.follows > li > a:active
+{
+	text-decoration: none;
+	color: #6f6f6f;
+	font-size: 14px;
+}
+.cross
+{
+	color: #999;
+	position: relative;
+	right: 0px;
+	top: 0px;
+}
+.cross:hover
+{
+	color: red;
+}
+#all
+{
+	list-style-type: none;
+	margin-left: -20px;
+	margin-top: 20px;
+}
 .side3
 {
 	width:4%;
@@ -70,10 +143,6 @@
 {
 	color:#999;
 	margin-left:10px;
-}
-.my_name:hover +.edit_link
-{
-	background-color:red;
 }
 .ans
 {
@@ -149,6 +218,27 @@
 	width:80%;
 	float:left;
 }
+.upload_image
+{
+	background-color: #777;
+	opacity: 0.5;
+	position: absolute;
+	top: 80px;
+	text-align: center;
+	padding-top: 55px;
+	height:125px;
+	width:125px;
+	border-radius:50%;
+	box-sizing: border-box;
+	display: none;
+}
+.camera_icon
+{
+	font-size: 20px;
+	color: #fff;
+	opacity: 1;
+	cursor: pointer;
+}
 .feed
 {
 	border-bottom:1px solid #e2e2e2;
@@ -156,6 +246,20 @@
 	margin-top:15px;
 	padding-bottom:10px;
 	font-size:15px;
+	position: relative;
+}
+.save_btn
+{
+	position: absolute;
+	right: 0px;
+	bottom: 6px;
+	display: none;
+}
+.details
+{
+	margin-bottom: 8px;
+	color: #020202;
+	font-size: 15px;
 }
 .optn
 {
